--- a/MyStore/MyStore/Base.lproj/Main.storyboard
+++ b/MyStore/MyStore/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Device View Controller-->
+        <!--Devices-->
         <scene sceneID="eQI-EP-BAO">
             <objects>
                 <tableViewController id="bvn-F7-86x" customClass="DeviceViewController" sceneMemberID="viewController">
@@ -14,18 +14,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="hMk-cG-2XE" detailTextLabel="Nfx-Uo-hEz" style="IBUITableViewCellStyleValue1" id="6Km-62-3Yl">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="CxN-z9-4UK" detailTextLabel="aVd-TF-3Fm" style="IBUITableViewCellStyleValue1" id="6Km-62-3Yl">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6Km-62-3Yl" id="b9P-i5-WxP">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hMk-cG-2XE">
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="CxN-z9-4UK">
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Nfx-Uo-hEz">
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="aVd-TF-3Fm">
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
@@ -33,6 +33,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Ea6-Fy-aRQ" kind="modal" identifier="UpdateDevice" id="JhK-0d-bfH"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -40,7 +43,7 @@
                             <outlet property="delegate" destination="bvn-F7-86x" id="3Ni-RV-cib"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="ScQ-YR-1HS">
+                    <navigationItem key="navigationItem" title="Devices" id="ScQ-YR-1HS">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ckl-Xq-lgn">
                             <connections>
                                 <segue destination="Ea6-Fy-aRQ" kind="modal" id="15e-3x-ikc"/>
@@ -147,4 +150,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="JhK-0d-bfH"/>
+    </inferredMetricsTieBreakers>
 </document>
