--- a/CameraApp/CameraApp/Base.lproj/Main.storyboard
+++ b/CameraApp/CameraApp/Base.lproj/Main.storyboard
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZbC-oW-Yma"/>
+                        <viewControllerLayoutGuide type="bottom" id="TW7-fF-DMo"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="8qY-Ox-bhI">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="430"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8qY-Ox-bhI">
+                                <rect key="frame" x="0.0" y="20" width="320" height="410"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="b5d-1n-dYn">
-                                <rect key="frame" x="137" y="457" width="77" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Take Photo">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="takePhoto:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="VLP-lU-txL"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="gR6-5T-YI6">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gR6-5T-YI6">
                                 <rect key="frame" x="137" y="504" width="88" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Select Photo">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -36,8 +29,27 @@
                                     <action selector="selectPhoto:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="g1o-BY-2fX"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b5d-1n-dYn">
+                                <rect key="frame" x="137" y="457" width="77" height="30"/>
+                                <state key="normal" title="Take Photo">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="takePhoto:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="VLP-lU-txL"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gR6-5T-YI6" firstAttribute="leading" secondItem="b5d-1n-dYn" secondAttribute="leading" id="0HI-Ma-RqT"/>
+                            <constraint firstItem="8qY-Ox-bhI" firstAttribute="top" secondItem="ZbC-oW-Yma" secondAttribute="bottom" id="HMd-Qr-gAU"/>
+                            <constraint firstItem="gR6-5T-YI6" firstAttribute="top" secondItem="b5d-1n-dYn" secondAttribute="bottom" constant="17" id="NMp-Kk-uhv"/>
+                            <constraint firstItem="8qY-Ox-bhI" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="aLg-u4-pqC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gR6-5T-YI6" secondAttribute="trailing" constant="79" id="bbL-J4-Ni0"/>
+                            <constraint firstAttribute="trailing" secondItem="8qY-Ox-bhI" secondAttribute="trailing" id="fWL-3h-oiB"/>
+                            <constraint firstItem="b5d-1n-dYn" firstAttribute="top" secondItem="8qY-Ox-bhI" secondAttribute="bottom" constant="27" id="fXM-iI-5Bn"/>
+                            <constraint firstItem="TW7-fF-DMo" firstAttribute="top" secondItem="gR6-5T-YI6" secondAttribute="bottom" constant="34" id="gjy-qH-QAN"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="8qY-Ox-bhI" id="cBk-pI-Dbo"/>
